Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106392

Alias is invalid when accessed from C++ via QObject::property()

    XMLWordPrintable

Details

    • 2a37ff2f49 (qt/qtdeclarative/dev) 2a37ff2f49 (qt/tqtc-qtdeclarative/dev) f604543d53 (qt/qtdeclarative/6.3) 1fe196d749 (qt/tqtc-qtdeclarative/6.2) e00afd8dfe (qt/qtdeclarative/6.4) f604543d53 (qt/tqtc-qtdeclarative/6.3)

    Description

      When running the attached test, this is the output:

      23:07:31: Starting /Users/mitch/dev/temp/qmlanimation-qt_dev_debug_non_fw-Debug/tst_untitled...
      QML debugging is enabled. Only use this in a safe environment.
      ********* Start testing of tst_untitled *********
      Config: Using QtTest library 6.5.0, Qt 6.5.0 (arm64-little_endian-lp64 shared (dynamic) debug build; by Apple LLVM 13.1.6 (clang-1316.0.21.2.5)), macos 12.4
      PASS   : tst_untitled::initTestCase()
      QDEBUG : tst_untitled::testCase1() QQuickItem_QML_1(0x10a07d7c0, parent=0x0, geometry=0,0 0x0) QVariant(Invalid)
      FAIL!  : tst_untitled::testCase1() 'derived' returned FALSE. ()
         Loc: [/Users/mitch/dev/temp/qmlanimation/tst_untitled.cpp(65)]
      PASS   : tst_untitled::cleanupTestCase()
      Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 78ms
      ********* Finished testing of tst_untitled *********
      23:07:32: /Users/mitch/dev/temp/qmlanimation-qt_dev_debug_non_fw-Debug/tst_untitled exited with code 1
      

      The property should be valid.

      Using a regular property works.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              fabiankosmale Fabian Kosmale
              mitch_curtis Mitch Curtis
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes